--- a/tools-json/pom.xml
+++ b/tools-json/pom.xml
@@ -17,14 +17,19 @@
 	
 	<dependencies>
 		<dependency>
-			<groupId>eu.mosaic_cloud.tools</groupId>
-			<artifactId>tools-exceptions</artifactId>
-			<version>${project.version}</version>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>${versions.dependencies.guava}</version>
 		</dependency>
 		<dependency>
 			<groupId>net.minidev</groupId>
 			<artifactId>json-smart</artifactId>
 			<version>${versions.dependencies.json-smart}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-core-asl</artifactId>
+			<version>${versions.dependencies.jackson}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
