--- a/tools-miscellaneous/pom.xml
+++ b/tools-miscellaneous/pom.xml
@@ -17,9 +17,9 @@
 	
 	<dependencies>
 		<dependency>
-			<groupId>eu.mosaic_cloud.tools</groupId>
-			<artifactId>tools-exceptions</artifactId>
-			<version>${project.version}</version>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>${versions.dependencies.guava}</version>
 		</dependency>
 	</dependencies>
 	
