--- a/components-httpg-jetty-connector/pom.xml
+++ b/components-httpg-jetty-connector/pom.xml
@@ -24,37 +24,27 @@
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-server</artifactId>
-			<version>${versions.dependencies.jetty}</version>
+			<version>${versions.dependencies.jetty-eclipse}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>jetty-deploy</artifactId>
-			<version>${versions.dependencies.jetty}</version>
+			<artifactId>jetty-webapp</artifactId>
+			<version>${versions.dependencies.jetty-eclipse}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>jetty-servlets</artifactId>
-			<version>${versions.dependencies.jetty}</version>
-		</dependency>
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>${versions.dependencies.servlet}</version>
-		</dependency>
-		<dependency>
-			<groupId>javax.servlet.jsp</groupId>
-			<artifactId>jsp-api</artifactId>
-			<version>${versions.dependencies.jsp-api}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.mortbay.jetty</groupId>
-			<artifactId>jsp-2.1-glassfish</artifactId>
-			<version>${versions.dependencies.jsp-glassfish}</version>
+			<artifactId>jetty-servlet</artifactId>
+			<version>${versions.dependencies.jetty-eclipse}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>jetty-jsp-2.1</artifactId>
-			<version>${versions.dependencies.jsp-jetty}</version>
+			<artifactId>jetty-io</artifactId>
+			<version>${versions.dependencies.jetty-eclipse}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-util</artifactId>
+			<version>${versions.dependencies.jetty-eclipse}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.rabbitmq</groupId>
