--- a/tools-exceptions/pom.xml
+++ b/tools-exceptions/pom.xml
@@ -17,14 +17,9 @@
 	
 	<dependencies>
 		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-classic</artifactId>
-			<version>${versions.dependencies.logback}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>${versions.dependencies.slf4j}</version>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>${versions.dependencies.guava}</version>
 		</dependency>
 	</dependencies>
 	
