Refactor Maven POM files some more

--- a/components-tools/pom.xml
+++ b/components-tools/pom.xml
@@ -61,6 +61,12 @@
 			<artifactId>json-smart</artifactId>
 			<version>${versions.dependencies.json-smart}</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${versions.dependencies.junit}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	
 	<properties>
