--- a/drivers/pom.xml
+++ b/drivers/pom.xml
@@ -127,6 +127,12 @@
 			<artifactId>riak-client</artifactId>
 			<version>${versions.dependencies.riak}</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${versions.dependencies.junit}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	
 	<build>
