--- a/examples/realtime-feeds-indexer/pom.xml
+++ b/examples/realtime-feeds-indexer/pom.xml
@@ -47,6 +47,12 @@
 			<artifactId>rome</artifactId>
 			<version>${versions.dependencies.rome}</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${versions.dependencies.junit}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	
 	<build>
