--- a/interoperability-tools/pom.xml
+++ b/interoperability-tools/pom.xml
@@ -21,6 +21,11 @@
 			<artifactId>interoperability-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>${versions.dependencies.guava}</version>
+		</dependency>
 	</dependencies>
 	
 	<properties>
