--- a/interoperability-zeromq/pom.xml
+++ b/interoperability-zeromq/pom.xml
@@ -46,6 +46,17 @@
 			<artifactId>tools-zeromq</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>${versions.dependencies.guava}</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${versions.dependencies.junit}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	
 	<properties>
