--- a/connectors/pom.xml
+++ b/connectors/pom.xml
@@ -83,6 +83,12 @@
 			<artifactId>protobuf-java</artifactId>
 			<version>${versions.dependencies.protobuf}</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${versions.dependencies.junit}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	
 	<build>
