Refactor cloudlets (and connector) code (mainly code movement)
* Move cloudlet backend implementation to one package `cloudlets.runtime` (including container, component, etc.).
* Remove `ICloudlet` interface (move its methods to `ICloudletController`).
* Rename `ResourceFinder` in according to its implementation (i.e. `CloudletComponentResourceFinder`).
* Minor code fixup introduced by connector refactorings.

--- a/cloudlets/pom.xml
+++ b/cloudlets/pom.xml
@@ -93,7 +93,7 @@
 							</descriptorRefs>
 							<archive>
 								<manifest>
-									<mainClass>eu.mosaic_cloud.cloudlets.container.CloudletContainerPreMain</mainClass>
+									<mainClass>eu.mosaic_cloud.cloudlets.runtime.CloudletComponentPreMain</mainClass>
 								</manifest>
 							</archive>
 						</configuration>
