--- a/cloudlets/src/main/resources/eu/mosaic_cloud/cloudlets/config.properties
+++ b/cloudlets/src/main/resources/eu/mosaic_cloud/cloudlets/config.properties
@@ -17,28 +17,31 @@
 # limitations under the License.
 # #L%
 ###
-AmqpQueueAccessor.0=amqp.exchange
-AmqpQueueAccessor.1=amqp.routing_key
-AmqpQueueAccessor.2=amqp.queue
-AmqpQueueAccessor.3=publisher
-AmqpQueueAccessor.4=consumer
-AmqpQueueAccessor.5=amqp.exchange_type
-AmqpQueueAccessor.6=amqp.exclusive
-AmqpQueueAccessor.7=amqp.auto_delete
-AmqpQueueAccessor.8=amqp.passive
-AmqpQueueAccessor.9=amqp.durable
-AmqpQueueConsumer.0=amqp.auto_ack
-CloudletDummyContainer.0=cloudlet.main_class
-CloudletDummyContainer.1=cloudlet.context_class
-CloudletDummyContainer.2=cloudlet.resource_file
-CloudletDummyContainer.3=cloudlet.no_instances
-KeyValueAccessor.0=kvstore.connector_name
-ContainerComponentCallbacks.0=amqp.driver.group.identifier
-ContainerComponentCallbacks.1=kvstore.driver.group.identifier
-ContainerComponentCallbacks.2=memcached.driver.group.identifier
-ContainerComponentCallbacks.3=self.group.identifier
-ContainerComponentCallbacks.4=mosaic-container:deploy-cloudlet
-ContainerComponentCallbacks.5=interop.channel.address
-ContainerComponentCallbacks.6=interop.driver.identifier
-ContainerComponentCallbacks.7=mosaic-component:get.channel.data
 
+CloudletComponentCallbacks.0=amqp.driver.group.identifier
+CloudletComponentCallbacks.1=kvstore.driver.group.identifier
+CloudletComponentCallbacks.2=memcached.driver.group.identifier
+CloudletComponentCallbacks.3=self.group.identifier
+CloudletComponentCallbacks.4=mosaic-container:deploy-cloudlet
+CloudletComponentCallbacks.5=interop.channel.address
+CloudletComponentCallbacks.6=interop.driver.identifier
+CloudletComponentCallbacks.7=mosaic-component:get.channel.data
+
+CloudletComponentCallbacks.8=cloudlet.main_class
+CloudletComponentCallbacks.9=cloudlet.context_class
+CloudletComponentCallbacks.10=cloudlet.resource_file
+CloudletComponentCallbacks.11=cloudlet.no_instances
+
+KvStoreConnector.0=kvstore.connector_name
+
+AmqpQueueConnector.0=amqp.exchange
+AmqpQueueConnector.1=amqp.routing_key
+AmqpQueueConnector.2=amqp.queue
+AmqpQueueConnector.3=publisher
+AmqpQueueConnector.4=consumer
+AmqpQueueConnector.5=amqp.exchange_type
+AmqpQueueConnector.6=amqp.exclusive
+AmqpQueueConnector.7=amqp.auto_delete
+AmqpQueueConnector.8=amqp.passive
+AmqpQueueConnector.9=amqp.durable
+AmqpQueueConnector.10=amqp.auto_ack
