Fix Maven module dependencies

--- a/cloudlets/pom.xml
+++ b/cloudlets/pom.xml
@@ -58,6 +58,16 @@
 		</dependency>
 		<dependency>
 			<groupId>eu.mosaic_cloud.tools</groupId>
+			<artifactId>tools-transcript</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>eu.mosaic_cloud.tools</groupId>
+			<artifactId>tools-exceptions</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>eu.mosaic_cloud.tools</groupId>
 			<artifactId>tools-json</artifactId>
 			<version>${project.version}</version>
 		</dependency>
