Make driver tests work with implicit mOSAIC components. (Ignore Redis and Memcache tests by default.)

--- a/drivers/src/test/resources/amqp-test.properties
+++ b/drivers/src/test/resources/amqp-test.properties
@@ -18,20 +18,20 @@
 # #L%
 ###
 
-interop.channel.address=tcp://127.0.0.1:31028
-interop.driver.identifier=driver.amqp.1
+interop.channel.address = tcp://127.0.0.1:26069
+interop.driver.identifier = drivers.amqp.tests
 
-amqp.host=127.0.0.1
-amqp.port=5672
-amqp.driver_threads=10
+amqp.host = 127.0.0.1
+amqp.port = 21688
+amqp.driver_threads = 1
 
-consumer.amqp.queue=queue-x
-consumer.amqp.consumer_id=consumer-x
-consumer.amqp.auto_ack=true
-consumer.amqp.exclusive=false
+consumer.amqp.queue = tests.queue
+consumer.amqp.consumer_id = tests.consumer
+consumer.amqp.auto_ack = false
+consumer.amqp.exclusive = false
 
-publisher.amqp.exchange=exchange-x
-publisher.amqp.routing_key=rk-x
-publisher.amqp.manadatory=true
-publisher.amqp.immediate=true
-publisher.amqp.durable=false
+publisher.amqp.exchange = tests.exchange
+publisher.amqp.routing_key = tests.routing_key
+publisher.amqp.manadatory = false
+publisher.amqp.immediate = false
+publisher.amqp.durable = false
