--- a/drivers/src/test/resources/redis-test.properties
+++ b/drivers/src/test/resources/redis-test.properties
@@ -18,9 +18,12 @@
 # #L%
 ###
 
-kvstore.driver_name=REDIS
-kvstore.driver_threads=1
+interop.channel.address = tcp://127.0.0.1:32159
+interop.driver.identifier = drivers.redis.tests
 
-kvstore.host=127.0.0.1
-kvstore.port=6379
-kvstore.bucket=12
+kvstore.host = 127.0.0.1
+kvstore.port = 6379
+kvstore.bucket = 11
+
+kvstore.driver_name = redis
+kvstore.driver_threads = 1
