--- a/drivers/src/test/resources/memcached-test.properties
+++ b/drivers/src/test/resources/memcached-test.properties
@@ -18,11 +18,14 @@
 # #L%
 ###
 
-kvstore.driver_name = MEMCACHED
-kvstore.driver_threads = 10
+interop.channel.address = tcp://127.0.0.1:31528
+interop.driver.identifier = drivers.memcache.tests
 
-memcached.host_1 = 127.0.0.1
-memcached.port_1 = 8091
-kvstore.user = test
-kvstore.passwd = test
-kvstore.bucket = test
+kvstore.host = 127.0.0.1
+kvstore.port = 8091
+kvstore.user = tests
+kvstore.passwd = tests
+kvstore.bucket = tests
+
+kvstore.driver_name = memcached
+kvstore.driver_threads = 10
