--- a/drivers/src/test/resources/riakpb-test.properties
+++ b/drivers/src/test/resources/riakpb-test.properties
@@ -18,9 +18,12 @@
 # #L%
 ###
 
-kvstore.driver_name = RIAKPB
-kvstore.driver_threads = 2
+interop.channel.address = tcp://127.0.0.1:21390
+interop.driver.identifier = drivers.riak.tests
 
 kvstore.host = 127.0.0.1
-kvstore.port = 8087
-kvstore.bucket = 10
+kvstore.port = 22652
+kvstore.bucket = tests
+
+kvstore.driver_name = riakpb
+kvstore.driver_threads = 1
