--- a/drivers/src/test/resources/riakrest-test.properties
+++ b/drivers/src/test/resources/riakrest-test.properties
@@ -18,9 +18,12 @@
 # #L%
 ###
 
-kvstore.driver_name = RIAKREST
-kvstore.driver_threads = 2
+interop.channel.address = tcp://127.0.0.1:27794
+interop.driver.identifier = drivers.riak.tests
 
 kvstore.host = 127.0.0.1
-kvstore.port = 8098
-kvstore.bucket = 10
+kvstore.port = 24637
+kvstore.bucket = tests
+
+kvstore.driver_name = riakrest
+kvstore.driver_threads = 1
