Refactor test property files / Refactor test ZeroMQ interoperability endpoints
* As the differences between the `*-test.properties` from `connectors` and `drivers` was almost inexistent,
  we've kept only those from `drivers` and we reuse them also in `connectors` tests.
* Replace all ZeroMQ test endpoints from `tcp://...` to `inproc://...`.

--- a/connectors/pom.xml
+++ b/connectors/pom.xml
@@ -33,6 +33,13 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>eu.mosaic_cloud.platform</groupId>
+			<artifactId>drivers</artifactId>
+			<version>${project.version}</version>
+			<classifier>tests</classifier>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>eu.mosaic_cloud.components</groupId>
 			<artifactId>components-core</artifactId>
 			<version>${project.version}</version>
