--- a/drivers/src/test/resources/amqp-queue-driver-test.properties
+++ b/drivers/src/test/resources/amqp-queue-driver-test.properties
@@ -18,12 +18,20 @@
 # #L%
 ###
 
-interop.channel.address = tcp://127.0.0.1:21390
-interop.driver.identifier = drivers.riak.tests
+interop.channel.address = inproc://bef7a80e-d22b-4a13-8ea4-9d33ac022223
+interop.driver.identifier = drivers.amqp.tests
 
-kvstore.host = 127.0.0.1
-kvstore.port = 22652
-kvstore.bucket = tests
+amqp.host = 127.0.0.1
+amqp.port = 21688
+amqp.driver_threads = 1
 
-kvstore.driver_name = riakpb
-kvstore.driver_threads = 1
+consumer.amqp.queue = tests.queue
+consumer.amqp.consumer_id = tests.consumer
+consumer.amqp.auto_ack = false
+consumer.amqp.exclusive = false
+
+publisher.amqp.exchange = tests.exchange
+publisher.amqp.routing_key = tests.routing_key
+publisher.amqp.manadatory = false
+publisher.amqp.immediate = false
+publisher.amqp.durable = false
