--- a/drivers/src/test/resources/memcache-kv-store-driver-test.properties
+++ b/drivers/src/test/resources/memcache-kv-store-driver-test.properties
@@ -18,7 +18,7 @@
 # #L%
 ###
 
-interop.channel.address = tcp://127.0.0.1:31528
+interop.channel.address = inproc://26491cf7-3510-495a-8237-b014e8131f74
 interop.driver.identifier = drivers.memcache.tests
 
 kvstore.host = 127.0.0.1
@@ -28,4 +28,4 @@ kvstore.passwd = tests
 kvstore.bucket = tests
 
 kvstore.driver_name = memcached
-kvstore.driver_threads = 10
+kvstore.driver_threads = 1
