--- a/drivers/src/test/resources/redis-kv-store-driver-test.properties
+++ b/drivers/src/test/resources/redis-kv-store-driver-test.properties
@@ -1,6 +1,6 @@
 ###
 # #%L
-# mosaic-connectors
+# mosaic-drivers
 # %%
 # Copyright (C) 2010 - 2012 Institute e-Austria Timisoara (Romania)
 # %%
@@ -18,7 +18,7 @@
 # #L%
 ###
 
-interop.channel.address = tcp://127.0.0.1:25763
+interop.channel.address = inproc://cb547d4d-75bc-429c-b2f1-271fbf7a6c12
 interop.driver.identifier = drivers.redis.tests
 
 kvstore.host = 127.0.0.1
