--- a/drivers/src/test/resources/riak-http-kv-store-driver-test.properties
+++ b/drivers/src/test/resources/riak-http-kv-store-driver-test.properties
@@ -1,6 +1,6 @@
 ###
 # #%L
-# mosaic-connectors
+# mosaic-drivers
 # %%
 # Copyright (C) 2010 - 2012 Institute e-Austria Timisoara (Romania)
 # %%
@@ -18,14 +18,12 @@
 # #L%
 ###
 
-interop.channel.address = tcp://127.0.0.1:27781
-interop.driver.identifier = drivers.memcache.tests
+interop.channel.address = inproc://969f6a78-ea5c-4595-893d-7863e140cac6
+interop.driver.identifier = drivers.riak.tests
 
 kvstore.host = 127.0.0.1
-kvstore.port = 8091
-kvstore.user = tests
-kvstore.passwd = tests
+kvstore.port = 24637
 kvstore.bucket = tests
 
-kvstore.driver_name = memcached
+kvstore.driver_name = riakrest
 kvstore.driver_threads = 1
