--- a/drivers/src/test/resources/riak-pb-kv-store-driver-test.properties
+++ b/drivers/src/test/resources/riak-pb-kv-store-driver-test.properties
@@ -1,6 +1,6 @@
 ###
 # #%L
-# mosaic-connectors
+# mosaic-drivers
 # %%
 # Copyright (C) 2010 - 2012 Institute e-Austria Timisoara (Romania)
 # %%
@@ -18,20 +18,12 @@
 # #L%
 ###
 
-interop.channel.address = tcp://127.0.0.1:22795
-interop.driver.identifier = drivers.amqp.tests
+interop.channel.address = inproc://969f6a78-ea5c-4595-893d-7863e140cac6
+interop.driver.identifier = drivers.riak.tests
 
-amqp.host = 127.0.0.1
-amqp.port = 21688
-amqp.driver_threads = 1
+kvstore.host = 127.0.0.1
+kvstore.port = 22652
+kvstore.bucket = tests
 
-consumer.amqp.queue = tests.queue
-consumer.amqp.consumer_id = tests.consumer
-consumer.amqp.auto_ack = false
-consumer.amqp.exclusive = false
-
-publisher.amqp.exchange = tests.exchange
-publisher.amqp.routing_key = tests.routing_key
-publisher.amqp.manadatory = false
-publisher.amqp.immediate = false
-publisher.amqp.durable = false
+kvstore.driver_name = riakpb
+kvstore.driver_threads = 1
