--- a/drivers/src/main/resources/eu/mosaic_cloud/drivers/kvstore/driver-component.properties
+++ b/drivers/src/main/resources/eu/mosaic_cloud/drivers/kvstore/driver-component.properties
@@ -17,12 +17,12 @@
 # limitations under the License.
 # #L%
 ###
-kvstore.driver_threads=16
-kvstore.driver_name=RIAKREST
-#kvstore.bucket=mosaic_test
-interop.channel.address=tcp://0.0.0.0:31029
-interop.driver.identifier=driver.riak.1
 
-self.group.identifier=a3e40f0b2c041bc694ace68ace08420d40f9cbc0
-resource.group.identifier=9cdce23e78027ef6a52636da7db820c47e695d11
+kvstore.driver_name = riakrest
+kvstore.driver_threads = 16
 
+interop.channel.address = tcp://0.0.0.0:31029
+interop.driver.identifier = driver.riak.1
+
+self.group.identifier = a3e40f0b2c041bc694ace68ace08420d40f9cbc0
+resource.group.identifier = 9cdce23e78027ef6a52636da7db820c47e695d11
