--- a/drivers/src/main/resources/eu/mosaic_cloud/drivers/queue/amqp/driver-component.properties
+++ b/drivers/src/main/resources/eu/mosaic_cloud/drivers/queue/amqp/driver-component.properties
@@ -17,10 +17,11 @@
 # limitations under the License.
 # #L%
 ###
-amqp.driver_threads=4
-interop.channel.address=tcp://0.0.0.0:31028
-interop.driver.identifier=driver.amqp.1
 
-self.group.identifier=a5e40f0b2c041bc694ace68ace08420d40f9cbc0
-resource.group.identifier=8cd74b5e4ecd322fd7bbfc762ed6cf7d601eede8
+amqp.driver_threads = 4
 
+interop.channel.address = tcp://0.0.0.0:31028
+interop.driver.identifier = driver.amqp.1
+
+self.group.identifier = a5e40f0b2c041bc694ace68ace08420d40f9cbc0
+resource.group.identifier = 8cd74b5e4ecd322fd7bbfc762ed6cf7d601eede8
